--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@headlessui/tailwindcss": "^0.2.2",
         "@heroicons/react": "^2.2.0",
         "@reduxjs/toolkit": "^2.11.2",
+        "classnames": "^2.5.1",
         "react-icons": "^5.5.0",
         "react-redux": "^9.2.0"
     }
