--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@popperjs/core": "^2.11.8",
         "@reduxjs/toolkit": "^2.11.2",
         "classnames": "^2.5.1",
+        "framer-motion": "^12.26.2",
         "lucide-react": "^0.562.0",
         "react-hook-form": "^7.69.0",
         "react-icons": "^5.5.0",
